--- a/ServiceHost/appsettings.json
+++ b/ServiceHost/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ShopDb": "Server=VENUS\\SQL2017 ; Initial Catalog=Shop; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;"
+    "ShopDb": "Server=VENUS\\SQL2017 ; Initial Catalog=Shop; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;",
+    "DiscountDb": "Server=VENUS\\SQL2017 ; Initial Catalog=Discount; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;"
+
   }
 }
