--- a/ServiceHost/appsettings.json
+++ b/ServiceHost/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ShopDb": "Server=VENUS\\SQL2017 ; Initial Catalog=Shop; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;",
-    "DiscountDb": "Server=VENUS\\SQL2017 ; Initial Catalog=Discount; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;",
-    "InventoryDb": "Server=VENUS\\SQL2017 ; Initial Catalog=Inventory; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;"
+    "ShopDb": "Server=MARS\\SQL2017 ; Initial Catalog=Shop; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;",
+    "DiscountDb": "Server=MARS\\SQL2017 ; Initial Catalog=Discount; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;",
+    "InventoryDb": "Server=MARS\\SQL2017 ; Initial Catalog=Inventory; User Id=sa; Password=tbhkdb2768; TrustServerCertificate=true;"
 
   }
 }
