--- a/01_ShopQuery/01_ShopQuery.csproj
+++ b/01_ShopQuery/01_ShopQuery.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IM.Infrastructure.EfCore\IM.Infrastructure.EfCore.csproj" />
     <ProjectReference Include="..\SM.Infrastructure.EfCore\SM.Infrastructure.EfCore.csproj" />
   </ItemGroup>
 
