--- a/BM.Infrastructure.Configuration/BM.Infrastructure.Configuration.csproj
+++ b/BM.Infrastructure.Configuration/BM.Infrastructure.Configuration.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\0_Framework\0_Framework.csproj" />
-    <ProjectReference Include="..\BM.Application.Contracts\BM.Application.Contracts.csproj" />
+    <ProjectReference Include="..\BM.Application\BM.Application.csproj" />
+    <ProjectReference Include="..\BM.Infrastructure.EfCore\BM.Infrastructure.EfCore.csproj" />
   </ItemGroup>
 
 </Project>
