--- a/BM.Infrastructure.Configuration/BM.Infrastructure.Configuration.csproj
+++ b/BM.Infrastructure.Configuration/BM.Infrastructure.Configuration.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\01_ShopQuery\01_ShopQuery.csproj" />
     <ProjectReference Include="..\BM.Application\BM.Application.csproj" />
     <ProjectReference Include="..\BM.Infrastructure.EfCore\BM.Infrastructure.EfCore.csproj" />
   </ItemGroup>
